--- a/Components/Pages/MoviePages/Index.razor
+++ b/Components/Pages/MoviePages/Index.razor
@@ -11,7 +11,7 @@
 
 <h1>Index</h1>
 <p>
-    <input type="search" @bind="titleFilter" @bind:event="oninput"  placeholder="Search" class="form-control" style="width:300px;"/>
+    <input type="search" @bind="titleFilter" @bind:event="oninput"  placeholder="Search" class="form-control" style="width:300px"/>
 </p>
 <p>
     <a href="movies/create" class="btn btn-primary">Create New</a>
